examples/test/testpolicy15729.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15729
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key7: value32
      key30: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value46
          key20: value0
          key38: value1
      podSelector:
        matchLabels:
          key33: value25
          key16: value45
          key14: value25
